--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
           <div class="small">Nasıl çalışır (kısa):</div>
           <ol class="small">
             <li>Kullanıcı hesap oluşturur (e-posta ile)</li>
+            <input type="date" id="birthdate" placeholder="Doğum Tarihi" required>
             <li>Sipariş formunu doldurur ve ödeme bağlantısı ile ödemeyi yapar</li>
             <li>Sen siparişi alır, 1-2 gün içinde düzenleme tamamlanır</li>
             <li>Müşteri memnun ise dosyayı teslim alır; değilse iade süreci başlatılır</li>
