Add login and signup sections to index.html

--- a/index.html
+++ b/index.html
@@ -111,7 +111,14 @@
         </form>
       </div>
     </section>
-
+<section class="login">
+  <h2>Giriş Yap</h2>
+  <form id="loginForm">
+    <input type="email" placeholder="E-posta" required>
+    <input type="password" placeholder="Şifre" required>
+    <button type="submit">Giriş Yap</button>
+  </form>
+</section>
     <section id="account" style="margin-top:18px">
       <div class="card">
         <h3>Hesaplar & Yönetim (demo)</h3>
@@ -129,14 +136,15 @@
         <div class="small">E-posta: <a href="mailto:talhag3109@gmail.com">talhag3109@gmail.com</a></div>
         <div class="small">Instagram: (sonra eklenecek)</div>
       </div>
-    </section>
-   section class="signup">
-    <h2>Hesap Oluştur</h2>
-    <form id="signupForm">
-      <input type="text" placeholder="Kullanıcı Adı" required>
-      <input type="email" placeholder="E-posta" required>
-      <input type="password" placeholder="Şifre" required>
-      <button type="submit">Kayıt Ol</button>
+   <section class="signup">
+  <h2>Hesap Oluştur</h2>
+  <form id="signupForm">
+    <input type="text" placeholder="Kullanıcı Adı" required>
+    <input type="email" placeholder="E-posta" required>
+    <input type="password" placeholder="Şifre" required>
+</form> <button type="submit">Kayıt Ol</button>
+</section>
+</section>
     </form>
   </section>
   </main>
