--- a/index.html
+++ b/index.html
@@ -143,6 +143,15 @@
     <input type="email" placeholder="E-posta" required>
     <input type="password" placeholder="Şifre" required>
 </form> <button type="submit">Kayıt Ol</button>
+     <section class="login">
+  <h2>Giriş Yap</h2>
+  <form id="loginForm">
+    <input type="email" placeholder="E-posta" required>
+    <input type="password" placeholder="Şifre" required>
+    <button type="submit">Giriş Yap</button>
+  </form>
+</section>
+     
 </section>
 </section>
     </form>
