--- a/index.html
+++ b/index.html
@@ -259,3 +259,27 @@
 </body>
 </html>
 <script src="firebase.js"></script>
+
+.order {
+  background: var(--card);
+  padding: 16px;
+  border-radius: 12px;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+  max-width: 500px;
+  margin: 40px auto;
+}
+
+.order h2 {
+  text-align: center;
+  color: var(--text);
+}
+
+.order input,
+.order textarea,
+.order select {
+  width: 100%;
+  padding: 10px;
+  border-radius: 8px;
+  margin-bottom: 10px;
+  border: 1px solid var(--border);
+}
