--- a/index.html
+++ b/index.html
@@ -172,6 +172,21 @@
     </form>
   </section>
   </main>
+  <section id="order-section">
+  <h2>Sipariş Oluştur</h2>
+  <form id="orderForm">
+    <label for="name">Ad Soyad:</label>
+    <input type="text" id="name" required><br>
+
+    <label for="description">Açıklama:</label>
+    <textarea id="description" required></textarea><br>
+
+    <label for="image">Fotoğraf (editlenecek):</label>
+    <input type="file" id="image" accept="image/*" required><br>
+
+    <button type="submit">Sipariş Gönder</button>
+  </form>
+</section>
   <footer>
     Ahmedit — © <span id="year"></span> · Demo prototip. Ödeme entegrasyonu için Shopier veya iyzico gibi sağlayıcılar kullan.
   </footer>
